fixed carousel swipe + ideally loads on mobile now

--- a/apps/research/src/components/mainGrid/GridItemA.module.scss
+++ b/apps/research/src/components/mainGrid/GridItemA.module.scss
@@ -101,12 +101,17 @@ pointer-events: none;
 
   padding: 8px 0;
 
-  display: flex;
-  justify-content: space-between;
-
-  .title .year{
-    margin-left: 16px;
+  // display: flex;
+  // justify-content: space-between;
+  .titleContainer {
+    display: flex;
+    justify-content: space-between;
+    gap: 16px;
   }
+
+  // .title .year{
+  //   margin-left: 16px;
+  // }
   .tags {
     color: var(--c-on-surface-secondary);
 
@@ -114,6 +119,11 @@ pointer-events: none;
   }
   .index {
     color: var(--c-on-surface-subtle);
+  }
+
+  .year {
+    color: var(--c-on-surface-secondary);
+
   }
   .links {
     margin-top: 16px;
@@ -132,10 +142,10 @@ pointer-events: none;
         --c-icon: currentColor;
 
         // Arrow location
-        span {
-          margin-top: -.18em;
-          // margin-left: -2px;
-        }
+        // span {
+        //   margin-top: -.18em;
+        //   // margin-left: -2px;
+        // }
     }
 
   }
@@ -146,9 +156,10 @@ pointer-events: none;
 .carousel {
   // overflow: hidden;
   position: absolute;
-  inset: -1px;
+  inset: 0px;
+  // inset: -1px;
 
-    background-color: rgb(0, 0, 0);
+    // background-color: rgb(0, 0, 0);
     // background-color: rgb(255, 0, 0);
 }
 
