--- a/apps/research/src/styles/base/_colors.scss
+++ b/apps/research/src/styles/base/_colors.scss
@@ -6,7 +6,7 @@
 
 [data-theme="light"] {
   --c-on-surface: #000000;
-  --c-on-surface-secondary: #7d7d7d;
+  --c-on-surface-secondary: #969696;
 
 
   
